started second slideshow and started horoscope page

--- a/page4horoscopes.html
+++ b/page4horoscopes.html
@@ -14,18 +14,44 @@
    <img src="images/darklogo.jpg" style="max-width:100%;height:auto;" alt="Astrocinema black and white logo">
   </header>
 
-  <nav class="n">
-    <ul class="z">
+  <nav class="n" id="topnav">
+    <ul class="z" id="navlist">
       <li><a href="index.html" class=button> Movie Picker </a></li>
       <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
       <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
       <li><a href="page4horoscopes.html" class=button> Horoscopes </a></li>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
       </ul>
   </nav>
 
     
   <main class="m">
-    <p>test</p>
+    <div style="overflow-x: auto;">
+    <h2 class="movieform">Click to Learn About Your Horoscope</h2>
+    <table class="horoscopeTable">
+   <tr> 
+     <td class="button" type="button" value="button" onclick=""> Aries </td>
+    <td class="button" type="button" value="button" onclick=""> Leo </td>
+    <td class="button" type="button" value="button" onclick=""> Sagittarius </td>
+   </tr>
+   <tr>  
+    <td class="button" type="button" value="button" onclick=""> Taurus </td>
+    <td class="button" type="button" value="button" onclick=""> Virgo </td>
+    <td class="button" type="button" value="button" onclick=""> Capricorn </td>
+   </tr>
+   <tr>  
+    <td class="button" type="button" value="button" onclick=""> Gemini </td>
+    <td class="button" type="button" value="button" onclick=""> Libra </td>
+    <td class="button" type="button" value="button" onclick=""> Aquarius </td>
+   </tr>
+   <tr>  
+    <td class="button" type="button" value="button" onclick=""> Cancer </td>
+    <td class="button" type="button" value="button" onclick=""> Scorpio </td>
+    <td class="button" type="button" value="button" onclick=""> Pisces </td>
+   </tr>
+    </table>
   </main>  
 
     
