--- a/page2astrosigns.html
+++ b/page2astrosigns.html
@@ -14,12 +14,15 @@
    <img src="images/darklogo.jpg" style="max-width:100%;height:auto;" alt="Astrocinema black and white logo">
   </header>
 
-  <nav class="n">
-    <ul class="z">
+  <nav class="n" id="topnav">
+    <ul class="z" id="navlist">
       <li><a href="index.html" class=button> Movie Picker </a></li>
       <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
       <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
       <li><a href="page4horoscopes.html" class=button> Horoscopes </a></li>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
       </ul>
   </nav>
 
