set up button and randomizer javascript code for random movie

--- a/page4horoscopes.html
+++ b/page4horoscopes.html
@@ -19,8 +19,8 @@
   </header>
 
 <!-- navigation -->    
-  <nav class="n" id="topnav">
-    <ul class="z" id="navlist">
+  <nav class="n">
+    <ul class="z">
       <li><a href="index.html" class=button> Movie Picker </a></li>
       <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
       <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
