--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </header>
 
 <!-- navigation -->    
-  <nav class="n" id="topnav">
-    <ul class="z" id="navlist">
+  <nav class="n">
+    <ul class="z">
       <li><a href="index.html" class=button> Movie Picker </a></li>
       <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
       <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
@@ -26,8 +26,8 @@
 
     
      <main class="m">
-    <h2 class="movieform">What Movie Should You Watch?</h2>
-      <form action="https://webdevbasics.net/scripts/yoga.php" method="post" id=mform>
+    <h2 class="movieformheader">What Movie Should You Watch?</h2>
+      <form name="movieForm" onsubmit="return formValidation()" method="post">
 
         <label for="name">Name:</label>
         <br>
