--- a/page3moviecatalog.html
+++ b/page3moviecatalog.html
@@ -15,8 +15,8 @@
   </header>
 
 <!-- navigation -->    
-  <nav class="n" id="topnav">
-    <ul class="z" id="navlist">
+  <nav class="n">
+    <ul class="z">
       <li><a href="index.html" class=button> Movie Picker </a></li>
       <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
       <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
@@ -28,80 +28,152 @@
   <main class="m">
     
     <!-- Assorted Movie Slideshow -->
-    <h3 class="catalogHeaders">Action Movies:</h1>
+    <h3 class="catalogHeaders">Example of Our Movie Assortment:</h1>
 <div id="slideshow1" class="slideshow-container">
   
   <div class="movieSlides fade">
-    <div class="numbertext">1 / 12</div>
+    <div class="numbertext">1 / 24</div>
     <img src="images/aries/action-diehard.jpg" style="width:100%" alt="Die Hard">
     <div class="text">Die Hard</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">2 / 12</div>
-    <img src="images/taurus/action-bourneidentity.jpeg" style="width:100%" alt="The Bourne Identity">
-    <div class="text">The Bourne Identity</div>
+    <div class="numbertext">2 / 24</div>
+    <img src="images/taurus/comedy-fantasticmrfox.jpeg" style="width:100%" alt="Fantastic Mr. Fox">
+    <div class="text">Fantastic Mr. Fox</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">3 / 12</div>
-    <img src="images/gemini/action-birdsofprey.jpg" style="width:100%" alt="Birds of Prey">
-    <div class="text">Birds of Prey</div>
+    <div class="numbertext">3 / 24</div>
+    <img src="images/gemini/crime-pulpfiction.jpg" style="width:100%" alt="Pulp Fiction">
+    <div class="text">Pulp Fiction</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">4 / 12</div>
-    <img src="images/cancer/action-johnwick.jpg" style="width:100%" alt="John Wick">
-    <div class="text">John Wick</div>
+    <div class="numbertext">4 / 24</div>
+    <img src="images/cancer/drama-lesmis.jpg" style="width:100%" alt="Les Miserables (2012)">
+    <div class="text">Les Miserables (2012)</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">5 / 12</div>
-    <img src="images/leo/action-iamlegend.jpg" style="width:100%" alt="I Am Legend">
-    <div class="text">I Am Legend</div>
+    <div class="numbertext">5 / 24</div>
+    <img src="images/leo/family-luca.jpg" style="width:100%" alt="Luca">
+    <div class="text">Luca</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">6 / 12</div>
-    <img src="images/virgo/action-missionimpossible.jpg" style="width:100%" alt="Mission: Impossible">
-    <div class="text">Mission: Impossible</div>
+    <div class="numbertext">6 / 24</div>
+    <img src="images/virgo/mystery-knivesout.jpg" style="width:100%" alt="Knives Out">
+    <div class="text">Knives Out</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">7 / 12</div>
-    <img src="images/libra/action-badboys.jpg" style="width:100%" alt="Bad Boys">
-    <div class="text">Bad Boys</div>
+    <div class="numbertext">7 / 24</div>
+    <img src="images/libra/fantasy-godzilla.jpg" style="width:100%" alt="Godzilla">
+    <div class="text">Godzilla</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">8 / 12</div>
-    <img src="images/scorpio/action-terminator.jpg" style="width:100%" alt="The Terminator">
-    <div class="text">The Terminator</div>
+    <div class="numbertext">8 / 24</div>
+    <img src="images/scorpio/horror-suspiria.jpeg" style="width:100%" alt="Suspiria (2018)">
+    <div class="text">Suspiria (2018)</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">9 / 12</div>
-    <img src="images/sag/action-speed.jpg" style="width:100%" alt="Speed">
-    <div class="text">Speed</div>
+    <div class="numbertext">9 / 24</div>
+    <img src="images/sag/romance-princessbride.jpg" style="width:100%" alt="The Princess Bride">
+    <div class="text">The Princess Bride</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">10 / 12</div>
-    <img src="images/capricorn/action-raidersofthelostark.jpg" style="width:100%" alt="Raiders of the Lost Ark">
-    <div class="text">Raiders of the Lost Ark</div>
+    <div class="numbertext">10 / 24</div>
+    <img src="images/capricorn/comedy-thedevilwearsprada.jpg" style="width:100%" alt="The Devil Wears Prada">
+    <div class="text">The Devil Wears Prada</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">11 / 12</div>
-    <img src="images/aquarius/action-thematrix.jpg" style="width:100%" alt="The Matrix">
-    <div class="text">The Matrix</div>
+    <div class="numbertext">11 / 24</div>
+    <img src="images/aquarius/scifi-moon.jpg" style="width:100%" alt="Moon">
+    <div class="text">Moon</div>
   </div>
 
   <div class="movieSlides fade">
-    <div class="numbertext">12 / 12</div>
-    <img src="images/pisces/action-crouchingtiger.jpg" style="width:100%" alt="Crouching Tiger Hidden Dragon">
-    <div class="text">Crouching Tiger Hidden Dragon</div>
+    <div class="numbertext">12 / 24</div>
+    <img src="images/pisces/romcom-rubysparks.jpg" style="width:100%" alt="Ruby Sparks">
+    <div class="text">Ruby Sparks</div>
   </div> 
+  
+  <div class="movieSlides fade">
+    <div class="numbertext">13 / 24</div>
+    <img src="images/aries/scifi-exmachina.jpg" style="width:100%" alt="Ex Machina">
+    <div class="text">Ex Machina</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">14 / 24</div>
+    <img src="images/taurus/crime-goodtime.jpeg" style="width:100%" alt="Good Time">
+    <div class="text">Good Time</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">15 / 24</div>
+    <img src="images/gemini/family-turningred.jpg" style="width:100%" alt="Turning Red">
+    <div class="text">Turning Red</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">16 / 24</div>
+    <img src="images/cancer/fantasy-amonstercalls.jpg" style="width:100%" alt="A Monster Calls">
+    <div class="text">A Monster Calls</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">17 / 24</div>
+    <img src="images/leo/superhero-avengers.jpg" style="width:100%" alt="The Avengers">
+    <div class="text">The Avengers</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">18 / 24</div>
+    <img src="images/virgo/romcom-whenharrymetsally.jpg" style="width:100%" alt="When Harry Met Sally">
+    <div class="text">When Harry Met Sally</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">19 / 24</div>
+    <img src="images/libra/crime-uncutgems.jpg" style="width:100%" alt="Uncut Gems">
+    <div class="text">Uncut Gems</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">20 / 24</div>
+    <img src="images/scorpio/romance-moonlight.jpg" style="width:100%" alt="Moonlight">
+    <div class="text">Moonlight</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">21 / 24</div>
+    <img src="images/sag/horror-getout.jpeg" style="width:100%" alt="Get Out">
+    <div class="text">Get Out</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">22 / 24</div>
+    <img src="images/capricorn/mystery-nightcrawler.jpg" style="width:100%" alt="Nightcrawler">
+    <div class="text">Nightcrawler</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">23 / 24</div>
+    <img src="images/aquarius/drama-killyourdarlings.jpg" style="width:100%" alt="Kill Your Darlings">
+    <div class="text">Kill Your Darlings</div>
+  </div>
+
+  <div class="movieSlides fade">
+    <div class="numbertext">24 / 24</div>
+    <img src="images/pisces/comedy-littlemisssunshine.jpg" style="width:100%" alt="Little Miss Sunshine">
+    <div class="text">Little Miss Sunshine</div>
+  </div>
 
   <!-- next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1, slideshow1)">&#10094;</a>
@@ -111,112 +183,45 @@
 
 <!-- dots/circles under slideshow -->
 <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(2, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(3, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(4, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(5, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(6, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(7, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(8, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(9, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(10, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(11, slideshow1)"></span>
-  <span class="dot" onclick="currentSlide(12, slideshow1)"></span>
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
+  <span class="dot" onclick="currentSlide(10)"></span>
+  <span class="dot" onclick="currentSlide(11)"></span>
+  <span class="dot" onclick="currentSlide(12)"></span>
+  <span class="dot" onclick="currentSlide(13)"></span>
+  <span class="dot" onclick="currentSlide(14)"></span>
+  <span class="dot" onclick="currentSlide(15)"></span>
+  <span class="dot" onclick="currentSlide(16)"></span>
+  <span class="dot" onclick="currentSlide(17)"></span>
+  <span class="dot" onclick="currentSlide(18)"></span>
+  <span class="dot" onclick="currentSlide(19)"></span>
+  <span class="dot" onclick="currentSlide(20)"></span>
+  <span class="dot" onclick="currentSlide(21)"></span>
+  <span class="dot" onclick="currentSlide(22)"></span>
+  <span class="dot" onclick="currentSlide(23)"></span>
+  <span class="dot" onclick="currentSlide(24)"></span>
 </div>
-
-<!-- Comedy Movie Slideshow -->
-    <h3 class="catalogHeaders">Comedy Movies:</h1>
-<div id="slideshow2" class="slideshow-container">
-  
-  <div class="movieSlides fade">
-    <div class="numbertext">1 / 12</div>
-    <img src="images/aries/comedy-itonya.jpeg" style="width:100%">
-    <div class="text">I, Tonya</div>
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">2 / 12</div>
-    <img src="images/taurus/comedy-fantasticmrfox.jpeg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">3 / 12</div>
-    <img src="images/gemini/comedy-theroyaltenenbaums.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">4 / 12</div>
-    <img src="images/cancer/comedy-planestrains.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">5 / 12</div>
-    <img src="images/leo/comedy-almostfamous.jpeg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">6 / 12</div>
-    <img src="images/virgo/comedy-booksmart.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">7 / 12</div>
-    <img src="images/libra/comedy-legallyblonde.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">8 / 12</div>
-    <img src="images/scorpio/comedy-ingridgoeswest.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">9 / 12</div>
-    <img src="images/sag/comedy-bridesmaids.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">10 / 12</div>
-    <img src="images/capricorn/comedy-thedevilwearsprada.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">11 / 12</div>
-    <img src="images/aquarius/comedy-thelobster.jpg" style="width:100%">
-  </div>
-
-  <div class="movieSlides fade">
-    <div class="numbertext">12 / 12</div>
-    <img src="images/pisces/comedy-littlemisssunshine.jpg" style="width:100%">
-  </div> 
-
-<!-- next and previous buttons -->  
-  <a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
-</div>
-<br>
-
-<!-- dots/circles -->    
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(2, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(3, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(4, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(5, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(6, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(7, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(8, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(9, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(10, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(11, slideshow2)"></span>
-  <span class="dot" onclick="currentSlide(12, slideshow2)"></span>
-</div>
-    
   </main>  
 
 <!-- returns javascript for random movie -->    
   <aside class="a">
-    <p>test</p>
+    <div class="buttonContainer">
+       <div class="centerButton">
+    <input type="button" class="movieButton" value="Random Movie">
+       </div>
+    </div>
+    <div class="movieContainer">
+      <div class="centerMovie">
+    <img src="images" width="100%" id="randomMovie" alt="Movie">
+      </div>
+    </div>
   </aside> 
 
 <!-- footer -->
