added tabindex to all buttons, updated color scheme for better visibility, added aria tags and viewport tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>Astrocinema</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -27,7 +29,7 @@
     
      <main class="m">
     <h2 class="movieformheader">What Movie Should You Watch?</h2>
-      <form name="movieForm" onsubmit="return formValidation()" method="post">
+      <form name="movieForm" onsubmit="return formValidation()" method="post" aria-label="Movie picker form based on astrology sign">
 
         <label for="name">Name:</label>
         <br>
