--- a/page4horoscopes.html
+++ b/page4horoscopes.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>Astrocinema</title>
   <link href="horoscope.css" rel="stylesheet" type="text/css" />
 
@@ -31,27 +33,27 @@
 <!-- horoscope table with buttons -->    
   <main class="m">
     <div style="overflow-x: auto;">
-    <h2 class="horoscopeHeader">Click to See Your Horoscope</h2>
+    <h2 class="horoscopeHeader">Click to See Your Horoscope:</h2>
     <table class="horoscopeTable">
    <tr class="hRows"> 
-     <td class="horoscopeButton" type="button" value="button" onclick="test('aries')"> Aries </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('leo')"> Leo </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('sagittarius')"> Sagittarius </td>
+     <td class="horoscopeButton" type="button" value="button" onclick="test('aries')" tabindex="1"> Aries </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('leo')" tabindex="2"> Leo </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('sagittarius')" tabindex="3"> Sagittarius </td>
    </tr>
    <tr class="hRows">  
-    <td class="horoscopeButton" type="button" value="button" onclick="test('taurus')"> Taurus </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('virgo')"> Virgo </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('capricorn')"> Capricorn </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('taurus')" tabindex="4"> Taurus </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('virgo')" tabindex="5"> Virgo </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('capricorn')" tabindex="6"> Capricorn </td>
    </tr>
    <tr class="hRows">  
-    <td class="horoscopeButton" type="button" value="button" onclick="test('gemini')"> Gemini </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('libra')"> Libra </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('aquarius')"> Aquarius </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('gemini')" tabindex="7"> Gemini </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('libra')" tabindex="8"> Libra </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('aquarius')" tabindex="9"> Aquarius </td>
    </tr>
    <tr class="hRows">  
-    <td class="horoscopeButton" type="button" value="button" onclick="test('cancer')"> Cancer </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('scorpio')"> Scorpio </td>
-    <td class="horoscopeButton" type="button" value="button" onclick="test('pisces')"> Pisces </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('cancer')" tabindex="10"> Cancer </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('scorpio')" tabindex="11"> Scorpio </td>
+    <td class="horoscopeButton" type="button" value="button" onclick="test('pisces')" tabindex="12"> Pisces </td>
    </tr>
     </table>
   </main>  
