--- a/page3moviecatalog.html
+++ b/page3moviecatalog.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>Astrocinema</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -28,7 +30,7 @@
   <main class="m">
     
     <!-- Assorted Movie Slideshow -->
-    <h3 class="catalogHeaders">Example of Our Movie Assortment:</h1>
+    <h3 class="catalogHeaders">Example of the Movie Assortment:</h1>
 <div id="slideshow1" class="slideshow-container">
   
   <div class="movieSlides fade">
@@ -176,8 +178,8 @@
   </div>
 
   <!-- next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, slideshow1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, slideshow1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, slideshow1)" tabindex="1">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, slideshow1)" tabindex="2">&#10095;</a>
 </div>
 <br>
 
@@ -213,7 +215,7 @@
 <!-- returns javascript for random movie -->    
   <aside class="a">
     <div class="buttonContainer">
-       <div class="centerButton">
+       <div class="centerButton" role="document" tabindex="3">
     <input type="button" class="movieButton" value="Random Movie">
        </div>
     </div>
