--- a/page3astrosigns.html
+++ b/page3astrosigns.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Astrocinema</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,18 +19,22 @@
 
 <!-- navigation -->    
   <nav class="n">
-    <ul class="z">
-      <li><a href="index.html" class=button> Movie Picker </a></li>
-      <li><a href="page2astrosigns.html" class=button> Astrology Signs </a></li>
-      <li><a href="page3moviecatalog.html" class=button> Movie Catalog </a></li>
-      <li><a href="page4horoscopes.html" class=button> Horoscopes </a></li>
-      </ul>
+    <div class="astronav" id="astronav2">
+      <a href="index.html" class="active" role="button">about</a>
+      <a href="page2moviepicker.html" role="button">movie picker</a>
+      <a href="page3astrosigns.html" role="button">astrology signs</a>
+      <a href="page4moviecatalog.html" role="button">movie catalog</a>
+      <a href="page5horoscopes.html" role="button">horoscopes</a>
+      <a href="javascript:void(0);" class="icon" onclick="navFunction()">
+    <i class="fa fa-bars"></i>
+    </a>
+    </div>
   </nav>
 
  <!-- astrology signs table -->   
  <main class="m"> 
    <div style="overflow-x: auto;">
-   <h3 class="astrosignsHeader">Astrology Sign Info</h3>  
+   <h3 class="astrosignsHeader">astrology sign info</h3>  
    <table class="astroTable">
 <tr>
   <th>
@@ -107,7 +112,7 @@
 
  <!-- elements -->   
   <aside class="a">
-    <h3 class="astrosystems">Elements</h3>
+    <h3 class="astrosystems">elements</h3>
     <p>Elements in astrology are tied to specific personality traits and tendencies.</p>
      <p class="systems">
        There are 4 elements: Fire, Earth, Air, Water</p>
@@ -129,7 +134,7 @@
 <br>
 
 <!-- modalities -->    
-<h3 class="astrosystems">Modalities</h3>    
+<h3 class="astrosystems">modalities</h3>    
     <p>Modalities are what represent the unique ways each group of signs express their energy, reacts to circumstances and navigates through life.</p>
     
     <p class="systems">There are 3 modalities: Cardinal, Fixed, and Mutable</p>
