realized I edited media query wrong for responsive layout so I fixed it

--- a/page2moviepicker.html
+++ b/page2moviepicker.html
@@ -54,6 +54,8 @@
           <option value="He">He/Him/His</option>
           <option value="She">She/Her/Her's</option>
           <option value="They">They/Them/Their's</option>
+          <option value="Other">Other</option>
+          <option value="Optout">Prefer not to share</option>
         </select>
           <br><br>
 
